Fixed issue with aligning of the username

--- a/packages/user-interface/src/components/user-name/user-name.module.scss
+++ b/packages/user-interface/src/components/user-name/user-name.module.scss
@@ -2,8 +2,8 @@
 
 .user-name {
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+  flex-direction: row;
+  align-items: center;
 }
 
 .user-name--mobile-menu {
